Rough fix for content image alignment.

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -18,6 +18,6 @@
     float: left;
 }
 
-.imbed figure {
-    margin-top: 100px;
+.article-content > div {
+    margin-left: -40px;
 }
